[metadata]
name = pylsp-isort
version = 0.1
author = Hiroki Teranishi
author_email = teranishi.hiroki@gmail.com
url = https://github.com/chantera/python-lsp-isort
description = isort plugin for the Python LSP Server
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Software Development
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires = python-lsp-server; isort>=5.0
python_requires = >= 3.7

[options.entry_points]
pylsp = isort = pylsp_isort.plugin

[options.extras_require]
dev = pytest

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
ignore_missing_imports = true

[isort]
profile = black
